--- a/index.html
+++ b/index.html
@@ -1,10 +1,17 @@
 <!DOCTYPE html>
-<html onclick="revealAnswer()">
+<html lang="en" onclick="revealAnswer()">
   <head>
     <link rel="stylesheet" href="Kelly.css">
 
     <script type="text/javascript" src="Tong.js"></script>
 
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+
+    <title>Kelly Tong | Portfolio</title>
   <head>
 
   <body>
@@ -23,7 +30,7 @@
       My favorite website is: <a href="https://www.instagram.com/ktongiee/?hl=en">instagram</a>
       </p>
       <p id="joke">How many seconds are there in a year? (Click to reveal answer)
-      <button type="button" onclick="alert('12 seconds. January 2nd, February 2nd, etc')">Click</button>
+      <button type="button" class="btn btn-secondary" onclick="alert('12 seconds. January 2nd, February 2nd, etc')">Click</button>
 
       <div id="slideshow">
         <center><img class="mySlides" src="https://cdn.vox-cdn.com/thumbor/gSsvwNu6F787ptxKQDodztRXxE4=/0x0:802x802/1220x813/filters:focal(351x271:479x399):format(webp)/cdn.vox-cdn.com/uploads/chorus_image/image/58822231/sharetea.0.jpg" height="190" width="304"></center>
@@ -34,5 +41,9 @@
       </div>
 
     </div>
+     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
   </body>
 </html>
