--- a/index.html
+++ b/index.html
@@ -16,31 +16,18 @@
 
   <body>
 
-      <center><font face = "Serif" size ="18">Kelly Tong</center></font>
-    <div id="col">
-      <p>
-      <strong>About me:</strong> I am an upcoming senior at Cleveland High School. I love drinking bubble tea and eating food.
-      </p>
-      <strong>Hobbies:</strong> ultimate frisbee, watching Korean dramas & anime
-      <p>
-      <strong>Pet Peeves:</strong> people walking slow
-      </p>
-      <strong>Fun Fact:</strong> my whole family’s names start with the letter K
-      <p>
-      My favorite website is: <a href="https://www.instagram.com/ktongiee/?hl=en">instagram</a>
-      </p>
-      <p id="joke">How many seconds are there in a year? (Click to reveal answer)
-      <button type="button" class="btn btn-secondary" onclick="alert('12 seconds. January 2nd, February 2nd, etc')">Click</button>
+    <div style="position: relative; width: 100%; height: 0; padding-top: 56.2225%;
+padding-bottom: 0; box-shadow: 0 2px 8px 0 rgba(63,69,81,0.16); margin-top: 1.6em; margin-bottom: 0.9em; overflow: hidden;
+border-radius: 8px; will-change: transform;">
+<iframe loading="lazy" style="position: absolute; width: 100%; height: 100%; top: 0; left: 0; border: none; padding: 0;margin: 0;"
+  src="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAFZectqgSE&#x2F;view?embed" allowfullscreen="allowfullscreen" allow="fullscreen">
+</iframe>
+</div>
+<a href="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAFZectqgSE&#x2F;view?utm_content=DAFZectqgSE&amp;utm_campaign=designshare&amp;utm_medium=embeds&amp;utm_source=link" target="_blank" rel="noopener">portfolio</a> by Kelly Tong
 
-      <div id="slideshow">
-        <center><img class="mySlides" src="https://cdn.vox-cdn.com/thumbor/gSsvwNu6F787ptxKQDodztRXxE4=/0x0:802x802/1220x813/filters:focal(351x271:479x399):format(webp)/cdn.vox-cdn.com/uploads/chorus_image/image/58822231/sharetea.0.jpg" height="190" width="304"></center>
-        <center><img class="mySlides" src="https://cdn-images-1.medium.com/max/1600/1*Df6Dq-2AvjjRgVx7jiv9gQ.jpeg" height="190" width="304"></center>
+      <!-- embed figma prototype -->
+      <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="800" height="450" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FEOJ3SN2WRlN45JaZrxn8BV%2FLinkPal%3Fnode-id%3D6%253A2%26scaling%3Dscale-down%26page-id%3D0%253A1%26starting-point-node-id%3D3%253A2%26show-proto-sidebar%3D1" allowfullscreen></iframe>
 
-        <button class="left click" onclick="plusDivs(-1)">&#10094;</button>
-        <button class="right click" onclick="plusDivs(1)">&#10095;</button>
-      </div>
-
-    </div>
      <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
