--- a/index.html
+++ b/index.html
@@ -1,36 +1,112 @@
-<!DOCTYPE html>
-<html lang="en" onclick="revealAnswer()">
-  <head>
-    <link rel="stylesheet" href="Kelly.css">
+<!DOCTYPE HTML>
+<!--
+	Strata by HTML5 UP
+	html5up.net | @ajlkn
+	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+-->
+<html>
+	<head>
+		<title>Kelly Tong's Portfolio</title>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<link rel="stylesheet" href="assets/css/main.css" />
+	</head>
+	<body class="is-preload">
 
-    <script type="text/javascript" src="Tong.js"></script>
+		<!-- Header -->
+			<header id="header">
+				<div class="inner">
+					<a class="image avatar"><img src="images/pic.jpg" alt="" /></a>
+					<h1><strong>I am Kelly</strong>, a UX designer<br />
+					based in Seattle, WA.<br /></h1>
+				</div>
+			</header>
 
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+		<!-- Main -->
+			<div id="main">
 
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+				<!-- One -->
+					<section id="one">
+						<header class="major">
+							<h2>Kelly's portfolio</h2>
+						</header>
+						<p>I am a fifth-year undergraduate student studying Human-Centered
+							Design & Engineering at the University of Washington.
+							</p>
+						<ul class="actions">
+							<li><a href="about.html" class="button">About Me</a></li>
+						</ul>
+					</section>
 
-    <title>Kelly Tong | Portfolio</title>
-  <head>
+				<!-- Two -->
+					<section id="two">
+						<h2>Recent Work</h2>
+						<div class="row">
+							<article class="col-6 col-12-xsmall work-item">
+								<a href="images/linkpals.jpg" class="image fit thumb"><img src="images/linkpals.jpg" alt="" /></a>
+								<a href="linkpals.html">LinkPals</a>
+								<p>UX design prototype to connect UW students within the college community.</p>
+							</article>
+							<article class="col-6 col-12-xsmall work-item">
+								<a href="images/brand.jpg" class="image fit thumb"><img src="images/brand.jpg" alt="" /></a>
+								<a href="mountaineers.html">The Mountaineers Brand Book</a>
+								<p>UX/UI & Graphic Brand Redesign</p>
+							</article>
+							<article class="col-6 col-12-xsmall work-item">
+								<a href="images/officer.jpg" class="image fit thumb"><img src="images/officer.jpg" alt="" /></a>
+								<h3>HCDE Student Association - Vice President</h3>
+								<p>See the work I do as VP for my major -- COMING SOON</p>
+							</article>
+						</div>
+					</section>
 
-  <body>
+				<!-- Three -->
+					<section id="three">
+						<h2>Get In Touch</h2>
+						<p>Feel free to connect with me!</p>
+						<div class="row">
+							<div class="col-4 col-12-small">
+								<ul class="labeled-icons">
+									<li>
+										<h3 class="icon solid fa-mobile-alt"><span class="label">Phone</span></h3>
+										(206) 229-6968
+									</li>
 
-    <div style="position: relative; width: 100%; height: 0; padding-top: 56.2225%;
-padding-bottom: 0; box-shadow: 0 2px 8px 0 rgba(63,69,81,0.16); margin-top: 1.6em; margin-bottom: 0.9em; overflow: hidden;
-border-radius: 8px; will-change: transform;">
-<iframe loading="lazy" style="position: absolute; width: 100%; height: 100%; top: 0; left: 0; border: none; padding: 0;margin: 0;"
-  src="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAFZectqgSE&#x2F;view?embed" allowfullscreen="allowfullscreen" allow="fullscreen">
-</iframe>
-</div>
-<a href="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAFZectqgSE&#x2F;view?utm_content=DAFZectqgSE&amp;utm_campaign=designshare&amp;utm_medium=embeds&amp;utm_source=link" target="_blank" rel="noopener">portfolio</a> by Kelly Tong
+									<li>
+										<h3 class="icon solid fa-envelope"><span class="label">Email</span></h3>
+										ktong3@uw.edu
+									</li>
 
-      <!-- embed figma prototype -->
-      <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="800" height="450" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FEOJ3SN2WRlN45JaZrxn8BV%2FLinkPal%3Fnode-id%3D6%253A2%26scaling%3Dscale-down%26page-id%3D0%253A1%26starting-point-node-id%3D3%253A2%26show-proto-sidebar%3D1" allowfullscreen></iframe>
+									<li>
+										<h3 class="icon brands fa-instagram"><span class="label">Instagram</span></h3>
+										<a href="https://www.instagram.com/ktongiee">@ktongiee</a>
+									</li>
+								</ul>
+							</div>
+						</div>
+					</section>
 
-     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
-  </body>
+
+		<!-- Footer -->
+			<footer id="footer">
+				<div class="inner">
+					<ul class="icons"><br>
+						<li><a href="https://www.linkedin.com/in/kelly-tong" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
+						<li><a href="https://github.com/kellytong" class="icon brands fa-github"><span class="label">Github</span></a></li>
+					</ul>
+					<ul class="copyright">
+						<li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+					</ul>
+				</div>
+			</footer>
+
+		<!-- Scripts -->
+			<script src="assets/js/jquery.min.js"></script>
+			<script src="assets/js/jquery.poptrox.min.js"></script>
+			<script src="assets/js/browser.min.js"></script>
+			<script src="assets/js/breakpoints.min.js"></script>
+			<script src="assets/js/util.js"></script>
+			<script src="assets/js/main.js"></script>
+
+	</body>
 </html>
