--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 									<ul class="contact">
 										<li>
 											<h3>Email</h3>
-											<p>ktong3@uw.edu</p>
+											<a href="mailto:tongkelly01@gmail.com">Send me an email</a>
 										</li>
 
 										<li>
