--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 									<ul class="contact">
 										<li>
 											<h3>Email</h3>
-											<a href="mailto:tongkelly01@gmail.com">Send me an email</a>
+											<p>tongkelly01@gmail.com - <a href="mailto:tongkelly01@gmail.com">Send an email</a></p>
 										</li>
 
 										<li>
