update about me & project reflections

--- a/aboutme.html
+++ b/aboutme.html
@@ -25,7 +25,7 @@
 								<div class="dropdown-content">
 									<a href="linkpals.html">LinkPals</a>
 									<a href="mountaineers.html">The Mountaineers</a>
-                                    <a href="capstone.html">UW HCDE Capstone</a>
+                  <a href="capstone.html">UW HCDE Capstone</a>
 								</div><a href="capstone.html">Recent Work</a>
 							</div>
 						</li>
@@ -41,24 +41,22 @@
 						<div class="inner">
 							<h1>I am Kelly</h1><hr>
 							<img class="pic" src="images/portfolio.jpeg" alt="" /><br>
-							<p>In the 2023-2024 school year, I was Vice President of the student association in my major,
-								Human Centered Design & Engineering for. The reason I joined HCDEsa is to connect with my peers
-								and get more involved within my community for my final year at UW. My main responsibilities as
-								VP include planning the social & professional development events throughout the school year
-								alongside the president and filling in for the president when they are absent. I also support
-								the other officers in their roles. Ultimately, I bring together the team by making sure that
-								everyone is on the same page with our schedule/weekly meetings and organizing team bonding activities.</p>
-
-							<p>In terms of my career goals, I enjoy working as a UX designer and a
-								developer. Upon getting accepted into HCDE, I was introduced to the
-								social aspect of technology involving user research and design. Now I
-								try to find ways to incorporate design into my work. I strive to create
-								as well as innovate technology in a way that helps people in their daily
-								lives.</p>
+							<p>Hi -- I'm Kelly Tong, a UX designer passionate about creating thoughtful,
+								user-centered digital experiences. My background in Human-Centered
+								Design & Engineering at the University of Washington has taught me
+								the importance of empathy, clear communication, and intuitive design.
+								I am drawn to projects that solve meaningful problems, whether it's
+							  simplifying a complex process or designing microinteractions to help
+							  users</p>
 
 							<p>In my free time, I like to play ultimate frisbee and volleyball or
-								engage in an outdoor activity. I enjoy watching K-dramas, listening to
-								music, and eating food.</p>
+								engage in an outdoor activity. I also enjoy watching K-dramas and listening
+								to music.</p>
+
+							<p>Let's connect! You can reach me at my email:
+								<a href="mailto:tongkelly01@gmail.com"><b>tongkelly01@gmail.com</b></a>
+								or on <a href="https://www.linkedin.com/in/kelly-tong"><b>LinkedIn</b></a>
+							</p>
 						</div>
 					</section>
 
