--- a/linkpals.html
+++ b/linkpals.html
@@ -46,9 +46,10 @@
 
 				<!-- Overview -->
 					<h2>Overview</h2><hr>
-					<p>The purpose of LinkPals is to provide a platform for students to connect and find study groups. With the ongoing pandemic, students
-						may feel disconnected from their peers and lack in-person interactions. LinkPals aims to bring students together and help them find
-						peers to study with. This project was for HCDE 318, the User-Centered Design course.</p>
+					<p>LinkPals is a conceptual mobile app designed to provide a platform for
+						students to connect with others and find study groups. The goal is to make
+						networking less awkward and more intentional by providing easy ways to
+						discover students with similar academics and start meaningful conversations.</p>
 
 					<div class="overview">
 						<h2><strong>My Role</strong></h2>
@@ -63,11 +64,13 @@
 						<h2><strong>Timeline</strong></h2>
 						<p>Jan 2023 - Mar 2023</p>
 						<p>(10 weeks)</p>
-					</div>
+					</div><br>
 
 					<h3>Problem Space</h3>
-					<p class="text">At times, it can be difficult for students to reach out to classmates outside of a school setting. Maintaining
-						relationships with study members can be just as important as finding people to study with for many students.</p>
+					<p class="text">Many people find networking events overwhelming and awkward,
+						struggling to initiate conversations or find like-minded people in large
+						crowds. There's a need for a tool that facilitates easy, relevant connections
+						in real-time.</p>
 
 					<h3>Design Question</h3>
 					<strong>How might we create an mobile application that facilitates students' academic success and community building?</strong>
