--- a/mountaineers.html
+++ b/mountaineers.html
@@ -46,10 +46,16 @@
 				<!-- Overview -->
 					<h2>Brand Book Redesign Overview</h2><hr>
 
-				<p>My goal in the redesign was to space out the information on the website and find a color scheme that is complementary to the nature of the
-				organization. During the process of creating this brand book, I utilized the white space to separate the paragraphs and expand the images.</p>
+				<p>The Mountaineers is a non-profit outdoor community based in Seattle, offering
+					hiking, climbing, and educational programs for outdoor enthusiasts. This
+					project involved redesigning their existing website to improve the user
+					experience for event registration, trip planning, and member engagement.</p>
 
-				<p>Figma Outline: Cover, client research, logo redesign, color scheme, typography & visual elements, imagery, mobile flow & description</p>
+				<h3>Problem Space</h3>
+				<p>The Mountaineers’ website felt cluttered and unintuitive, especially for
+					new users trying to register for events or find trip information. There
+					was a need for a cleaner, more streamlined experience to encourage member
+					engagement and simplify trip planning.</p>
 
 				<iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="785" height="550" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FPww2uMT7ejQz6hWbLrnWDS%2F308--Brand-Book%3Ftype%3Ddesign%26node-id%3D1-133%26t%3DbfLfBDsXAYL8ml1x-1%26scaling%3Dmin-zoom%26page-id%3D0%253A1%26mode%3Ddesign" allowfullscreen></iframe>
 				<p>Here is a quick run-through of the brank book I created on Figma. The rest that follows goes in more depth about my thought processes and description for each of the brand book components.</p><br>
@@ -94,7 +100,7 @@
 					</div><br>
 
 				<!-- Font & Icons -->
-			        <h2>Typography & Visual Elements</h2><hr>
+			    <h2>Typography & Visual Elements</h2><hr>
 					<p>For the typography, I chose the Roboto Slab Regular font. The Serif typeface makes it semi-formal but still friendly. The
 						table shows the various sizes used in the redesign. The visual elements listed show what I included in the mobile flow.</p>
 
@@ -103,12 +109,10 @@
 					<li>The buttons are common signifiers for actions people
 						normally are familiar with:</li>
 
-					<div class="bullet">
-						<li>Hamburger menu</li>
-						<li>Profile icon</li>
-						<li>"X" to close</li>
-						<li>"+" to expand for more information</li>
-					</div><br>
+					<li>Hamburger menu</li>
+					<li>Profile icon</li>
+					<li>"X" to close</li>
+					<li>"+" to expand for more information</li><br>
 
 			    <!-- Imagery -->
 					<h2>Imagery</h2><hr>
@@ -129,6 +133,18 @@
 
 					<p>The third pain point was that the signup page for the course was too text-heavy with the apply button at the bottom after much scrolling. Instead, I
 						condensed all the information into a box with a plus button to indicate the user to click on it for more information.</p>
+
+					<h2>Reflection</h2><hr>
+					<p>The redesigned Mountaineers website delivers a smoother, more intuitive experience for users planning trips and registering for events.</p>
+
+					<h3>My takeaways:</h3>
+						<li>The power of small UI changes (such as icons, filters) in improving usability</li>
+						<li>Significance of streamlining multi-step process</li>
+						<li>How to advocate for community-driven content in website design</li><br>
+
+					<h3>Next Steps:</h3>
+						<li>Explore mobile responsiveness improvements</li>
+						<li>Conduct user testing for ease of navigation and task completion</li>
 			</section>
 
 		<!-- Footer -->
